--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
             <artifactId>mapstruct</artifactId>
             <version>1.5.5.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         
         <dependency>
             <groupId>org.apache.commons</groupId>
