--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,20 @@
             <version>5.2.1</version>
         </dependency>
 
+        <!-- Web3j for Ethereum Blockchain Integration -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <version>4.10.3</version>
+        </dependency>
+
+        <!-- Web3j Contract Generation -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>contracts</artifactId>
+            <version>4.10.3</version>
+        </dependency>
+
         <!-- File Upload Support -->
         <dependency>
             <groupId>commons-fileupload</groupId>
