--- a/pom.xml
+++ b/pom.xml
@@ -103,13 +103,6 @@
         </dependency>
 
         <!-- Blockchain & IPFS Dependencies for Signature Verification -->
-        <!-- Web3j for Ethereum integration -->
-        <dependency>
-            <groupId>org.web3j</groupId>
-            <artifactId>core</artifactId>
-            <version>4.9.8</version>
-        </dependency>
-
         <!-- HTTP Client for Pinata IPFS API -->
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
@@ -259,16 +252,12 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <release>21</release>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>1.18.34</version>
-                        </path>
-                        <path>
-                            <groupId>org.mapstruct</groupId>
-                            <artifactId>mapstruct-processor</artifactId>
-                            <version>1.5.5.Final</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
